--- a/humaya/style.css
+++ b/humaya/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -122,7 +123,6 @@ section article:nth-child(4) {
 }
 
 article img {
-  max-width: 50%;
   width: 50%;
   image-rendering: initial;
 }
@@ -158,6 +158,7 @@ strong {
   height: 40px;
   border-style: none;
   border: 3px solid #bca177;
+  margin-bottom: 10px;
 }
 
 #calidad {
@@ -202,4 +203,218 @@ strong {
   height: auto;
 
   margin-bottom: 10px;
+}
+
+.contactanos {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+#contacto {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  max-width: 1300px;
+  background-color: #fff;
+  margin: auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+form div {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+}
+form div:nth-child(4) {
+  height: 100px;
+}
+form div textarea {
+  resize: none;
+  height: 100px;
+  background-color: #856b4f;
+  border: none;
+  width: 400px;
+  height: 80px;
+  color: #fff;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+input {
+  background-color: #856b4f;
+  border: none;
+  width: 400px;
+  height: 40px;
+  color: #fff;
+  padding-left: 10px;
+}
+
+#btnform {
+  margin-top: 40px;
+  width: 140px;
+  height: 50px;
+  text-align: center;
+  border: 4px solid #856b4f;
+  background-color: #fff;
+  color: #856b4f;
+}
+
+#recetas {
+  display: flex;
+  flex-direction: row;
+  max-width: 1300px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 25px;
+}
+
+.lirecetas {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  gap: 20px;
+}
+
+.recetacard img {
+  width: 100%;
+}
+
+.recetacard {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  color: #bca177;
+  max-width: 350px;
+  background-color: #121212;
+  height: 500px;
+  min-width: 350px;
+}
+
+.recetacard h3 {
+  margin-top: 20px;
+}
+
+.recetacard p {
+  margin: 20px;
+}
+
+#contactofooter {
+  height: 200px;
+  max-width: 1300px;
+  margin: auto;
+  background-color: #121212;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  color: #856b4f;
+  align-items: center;
+}
+
+#contactofooter ul li {
+  list-style: none;
+  margin-top: 8px;
+}
+
+#btnform {
+  margin-top: 40px;
+  width: 140px;
+  height: 50px;
+  text-align: center;
+  border: 4px solid #856b4f;
+  background-color: #fff;
+  color: #856b4f;
+}
+
+#btnreceta {
+  margin-top: 40px;
+  width: 140px;
+  height: 50px;
+  text-align: center;
+  border: 4px solid #856b4f;
+  background-color: #fff;
+  color: #856b4f;
+}
+
+footer {
+  color: #fff;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 1100px) {
+  #producto {
+    justify-content: center;
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
+    max-width: 1300px;
+    min-width: 500px;
+    width: 100%;
+  }
+
+  .infoproducto {
+    height: 200px;
+    width: 100%;
+  }
+
+  #producto img {
+    width: 100%;
+    height: auto;
+  }
+
+  #contacto img {
+    display: none;
+  }
+
+  #contacto form {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .redes {
+    padding-bottom: 50px;
+  }
+  .redes ul {
+    display: flex;
+    flex-direction: row;
+    gap: 10px 10px;
+  }
+
+  .redes ul li {
+    width: 100%;
+    display: flex;
+  }
+
+  #recetas {
+    overflow: auto;
+    justify-content: start;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  #hero {
+    justify-content: center;
+    text-align: center;
+  }
 }
