--- a/humaya/style.css
+++ b/humaya/style.css
@@ -359,13 +359,25 @@ footer {
 }
 
 @media only screen and (max-width: 1100px) {
+  form div {
+    width: 80%;
+  }
+
+  input {
+    width: 100%;
+  }
+
+  .consulta {
+    width: 100%;
+  }
+
   #producto {
     justify-content: center;
     flex-direction: column;
     margin: auto;
     align-items: center;
     max-width: 1300px;
-    min-width: 500px;
+
     width: 100%;
   }
 
