--- a/humaya/style.css
+++ b/humaya/style.css
@@ -429,4 +429,18 @@ footer {
     justify-content: center;
     text-align: center;
   }
+
+  .infoproducto h4 {
+    font-size: 18px;
+  }
+
+  .infoproducto p {
+    font-size: 14px;
+    max-width: 90%;
+  }
+
+  .infoproducto strong {
+    font-size: 14px;
+    max-width: 90%;
+  }
 }
