--- a/humaya/style.css
+++ b/humaya/style.css
@@ -494,4 +494,13 @@ footer {
   .descripcion {
     max-width: 80%;
   }
+
+  .redes h2 {
+    font-size: 25px;
+  }
+
+  iframe {
+    height: 100px;
+    width: 100px;
+  }
 }
