--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+}
+
 body {
   background-color: #0c0c0c;
   margin: 0px;
@@ -9,6 +12,7 @@ header {
   height: 15vh;
   display: flex;
   flex-direction: column;
+  position: absolute;
 }
 
 header p {
@@ -16,8 +20,10 @@ header p {
 }
 
 section {
+  justify-content: center;
   width: 100%;
-  height: 85vh;
+  height: 100vh;
+  align-items: center;
   display: flex;
   flex-direction: row;
 }
@@ -35,52 +41,12 @@ p {
   padding-left: 50px;
 }
 
-.pfp-terminal {
-  display: flex;
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-  height: calc(100% - 15vh);
-  min-width: 518px;
-  min-height: 555px;
-}
-
-.terminal {
-  width: 518px;
-  height: 555px;
-
-  border: 1px solid #333333;
-  margin-left: 10px;
+img {
+  max-width: 400px;
+  max-height: 400px;
   border-radius: 8px;
-  background-color: #0c0c0c;
-}
-
-.terminal-top {
-  width: 100%;
-  height: 35px;
-  background-color: #3333;
-  display: flex;
-  align-items: end;
-}
-
-.terminal-window {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 250px;
-  height: 25px;
-
-  background-color: #0c0c0c;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  margin-left: 16px;
-}
-
-.pfp {
-  position: absolute;
-  margin-bottom: 45px;
-  border-bottom-right-radius: 8px;
-  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
 }
 
 h1,
@@ -149,4 +115,57 @@ li {
 #linkedin:hover {
   cursor: pointer;
   transform: translate(0px, -5px);
+}
+
+@media only screen and (max-width: 880px) {
+  header p {
+    padding: 0;
+  }
+
+  header {
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+  .about {
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .about p {
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .icons {
+    justify-content: center;
+  }
+
+  img {
+    width: 80%;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  section {
+    height: 85vh;
+    flex-direction: column;
+    margin: auto;
+    justify-content: start;
+    align-items: center;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+}
+
+@media only screen and (max-width: 450px) {
+}
+
+@media only screen and (max-width: 400px) {
 }
