--- a/style.css
+++ b/style.css
@@ -1,10 +1,27 @@
 * {
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: #0c0c0c;
   margin: 0px;
   padding: 0px;
+}
+
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #14ff00; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  height: 10px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
@@ -19,7 +36,7 @@ header p {
   margin-left: 10px;
 }
 
-section {
+#inicio {
   justify-content: center;
   width: 100%;
   height: 100vh;
@@ -41,7 +58,7 @@ p {
   padding-left: 50px;
 }
 
-img {
+.imgpfp {
   max-width: 400px;
   max-height: 400px;
   border-radius: 8px;
@@ -95,7 +112,7 @@ b {
   justify-content: start;
 }
 
-ul {
+.icons ul {
   display: flex;
   margin-left: -60px;
 }
@@ -143,12 +160,12 @@ li {
     justify-content: center;
   }
 
-  img {
+  .imgpfp {
     width: 80%;
     border-bottom-right-radius: 8px;
     border-top-right-radius: 8px;
   }
-  section {
+  #inicio {
     height: 85vh;
     flex-direction: column;
     margin: auto;
@@ -161,11 +178,173 @@ li {
   }
 }
 
-@media only screen and (max-width: 500px) {
+.nav {
+  position: fixed;
+  display: flex;
+
+  width: 500px;
+  height: 50px;
+  top: 90vh;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  z-index: 100;
+  background-color: #fff;
+  opacity: 0.95;
+  border-radius: 50px;
+  backdrop-filter: blur(100px);
 }
 
-@media only screen and (max-width: 450px) {
+.nav ul {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  margin-left: 0px;
+  justify-content: center;
+  gap: 20px;
+  padding: 0px;
 }
 
-@media only screen and (max-width: 400px) {
+.nav ul li {
+  width: auto;
+  margin-left: 0px;
+  font-family: Roboto Mono;
+}
+
+.nav a {
+  color: #0c0c0c;
+  text-decoration: none;
+  transition: all 0.15s;
+
+  font-weight: 600;
+}
+
+.nav a:hover {
+  color: #0c0c0c;
+  transform: translateY(-3px);
+}
+
+.border {
+  height: 5px;
+  width: 80%;
+  border-radius: 50px;
+
+  bottom: 0;
+  position: absolute;
+  background: linear-gradient(
+    124deg,
+    #ff2400,
+    #e81d1d,
+    #e8b71d,
+    #e3e81d,
+    #1de840,
+    #1ddde8,
+    #2b1de8
+  );
+  background-size: 1800% 1800%;
+
+  -webkit-animation: rainbow 18s ease infinite;
+  -z-animation: rainbow 18s ease infinite;
+  -o-animation: rainbow 18s ease infinite;
+  animation: rainbow 18s ease infinite;
+}
+
+@-webkit-keyframes rainbow {
+  0% {
+    background-position: 0% 82%;
+  }
+  50% {
+    background-position: 100% 19%;
+  }
+  100% {
+    background-position: 0% 82%;
+  }
+}
+@-moz-keyframes rainbow {
+  0% {
+    background-position: 0% 82%;
+  }
+  50% {
+    background-position: 100% 19%;
+  }
+  100% {
+    background-position: 0% 82%;
+  }
+}
+@-o-keyframes rainbow {
+  0% {
+    background-position: 0% 82%;
+  }
+  50% {
+    background-position: 100% 19%;
+  }
+  100% {
+    background-position: 0% 82%;
+  }
+}
+@keyframes rainbow {
+  0% {
+    background-position: 0% 82%;
+  }
+  50% {
+    background-position: 100% 19%;
+  }
+  100% {
+    background-position: 0% 82%;
+  }
+}
+
+#proyectos {
+  display: flex;
+  height: 100vh;
+  background-color: #0c0c0c;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 70px;
+}
+
+.row {
+  gap: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  max-width: 1300px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: auto;
+}
+
+.item:hover {
+  cursor: pointer;
+
+  &.item p {
+    color: #fff;
+  }
+}
+
+.item img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  filter: grayscale(100%);
+  transition: all 0.15s;
+}
+
+.item img:hover {
+  cursor: pointer;
+  filter: grayscale(0%);
+}
+
+.item p {
+  font-size: 20px;
+  transition: all 0.2s;
 }
