--- a/style.css
+++ b/style.css
@@ -347,8 +347,11 @@ li {
 .item p {
   font-size: 20px;
   transition: all 0.2s;
+  text-decoration: none;
 }
 
-.itea a:visited {
+a:-webkit-any-link {
+  color: -webkit-link;
+  cursor: pointer;
   text-decoration: none;
 }
